Add vercel config

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ APP_SECRET  = asfsafasfsafasfxzvccxvcxvwrewrw
 
 DB_PASSWORD = fug78y9mBSIKTngF
 
-DB_URI = mongodb+srv://minhtungg2504:nvUwBzXdBoG8cVsH@cluster0.pyewl0j.mongodb.net/
+DB_URI = mongodb+srv://minhtungg2504:nvUwBzXdBoG8cVsH@cluster0.pyewl0j.mongodb.net/?retryWrites=true&w=majority
