--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 APP_PORT = 5000
-
-APP_SECRET  = asfsafasfsafasfxzvccxvcxvwrewrw
-
+ACCESS_TOKEN_SECRET = your_long_and_random_access_token_secret
+REFRESH_TOKEN_SECRET = your_long_and_random_refresh_token_secret
 DB_PASSWORD = fug78y9mBSIKTngF
 
-DB_URI = mongodb+srv://minhtungg2504:nvUwBzXdBoG8cVsH@cluster0.pyewl0j.mongodb.net/?retryWrites=true&w=majority
+DB_URI = mongodb://localhost:27017/
